rnsc/test_data/integration/error/parser/type_hints/methodref/no_operand_3.rns
.class   @methodref MyClass methodName ; no descriptor provided
.super java/lang/Object